--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
-        "jms/serializer": "^3.10",
+        "jms/serializer-bundle": "^3.7",
         "nyholm/psr7": "^1.3",
         "psr/http-client": "^1.0",
+        "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
